# expense_tracker_rust

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
src/: api.rs  app.rs  main.rs  models.rs  translate.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
style/: output.css
