[package]
name = "expense_tracker_rust-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
rand = "0.8" 
getrandom = { version = "0.2", features = ["js"] }

[workspace]
members = ["src-tauri"]
